traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metada:
  name: ratelimit
spec:
  rateLimit:
    average: 5
    period: 1s
